package sample.Methods;

public interface Iterator {  // Создал интерфейс
    public boolean hasNext();
    public Object next();
    public Object back();
    public Object preview();
}



