package sample.Metods;
/**
 * Интерфейс, определяющий структуры классов,
 * которые можно повторять.
 * @author Kozhevnikov Alexander pPi-171
 * @version 1.2
 */
public interface Aggregate {
    public Iterator getIterator();
}
