@startuml

title __ÇÀÄÀ×À 9's Class Diagram__\n

  namespace sample {
    class sample.Controller {
    }
  }
  

  namespace sample {
    class sample.Main {
    }
  }
  

  namespace sample {
    namespace Methods {
      interface sample.Methods.Aggregate {
      }
    }
  }
  

  namespace sample {
    namespace Methods {
      class sample.Methods.ImageCollection {
      }
    }
  }
  

  namespace sample {
    namespace Methods {
      interface sample.Methods.Iterator {
      }
    }
  }
  

  sample.Controller o-- sample.Methods.ImageCollection : imgs
  sample.Controller o-- sample.Methods.Iterator : iter_main
  sample.Main -up-|> javafx.application.Application
  sample.Methods.ImageCollection .up.|> sample.Methods.Aggregate


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
